[package]
name = "backdoo-rs"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2021"
description = "A simple Meterpreter stager written in Rust."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/backdoo-rs"
license = "MIT"
keywords = ["windows", "metasploit-framework", "meterpreter", "tactical-exploitation"]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory"
]

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
panic = "abort"
